k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-devops-demo-svc
spec:
  selector:
    run: my-devops-demo
  ports:
    - protocol: TCP
      port: 11130
      targetPort: 11130
